hphp/hack/test/typecheck/reified_generics/new_static.php.exp
File "new_static.php", line 6, characters 5-16:
Cannot call new static because the current class has reified generics (Typing[4310])
