hphp/hack/test/typecheck/reified_generics/new_static.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

final class R<reify T> {
  public function f(): void {
    new static();
  }
}
